--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.2",
     "react-currency-format": "^1.0.0",
     "react-dom": "^17.0.2",
+    "react-highlight-words": "^0.17.0",
     "react-hook-form": "^7.20.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
