--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^17.0.2",
     "react-highlight-words": "^0.17.0",
     "react-hook-form": "^7.20.3",
+    "react-quill": "^1.3.5",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
